parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    AMPERSAND

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA goto_main ID COLON bloque FIN
Rule 2     goto_main -> <empty>
Rule 3     bloque -> vars guarda_variables_global funciones bloque_main
Rule 4     guarda_variables_global -> <empty>
Rule 5     vars -> var SEMI vars
Rule 6     vars -> <empty>
Rule 7     var -> tipo ID
Rule 8     var -> tipo ID LBRACKET CTE_E RBRACKET
Rule 9     tipo -> ENTERO
Rule 10    tipo -> DECIMAL
Rule 11    tipo -> PALABRA
Rule 12    tipo -> BOOLEANO
Rule 13    funciones -> funcion funciones
Rule 14    funciones -> <empty>
Rule 15    guarda_funcion -> <empty>
Rule 16    funcion -> FUNCION tipo guarda_funcion_id LPAREN parametros RPAREN guarda_funcion codigo_bloque fin_funcion
Rule 17    fin_funcion -> <empty>
Rule 18    guarda_funcion_id -> ID
Rule 19    parametros -> parametro mas_parametros
Rule 20    parametros -> <empty>
Rule 21    parametro -> tipo ID
Rule 22    mas_parametros -> COMMA parametro mas_parametros
Rule 23    mas_parametros -> <empty>
Rule 24    bloque_main -> MAIN LPAREN RPAREN set_main_id codigo_bloque
Rule 25    set_main_id -> <empty>
Rule 26    codigo_bloque -> LCURLY vars guarda_variables_local estatutos RCURLY
Rule 27    guarda_variables_local -> <empty>
Rule 28    estatuto -> assignation checa_pila_a
Rule 29    estatuto -> condicion
Rule 30    estatuto -> imprime
Rule 31    estatuto -> mientras
Rule 32    estatuto -> function_use
Rule 33    estatuto -> return
Rule 34    estatuto -> accion
Rule 35    estatuto -> dibujo
Rule 36    checa_pila_a -> <empty>
Rule 37    function_use -> validar_funcion LPAREN add_parametro more_ids RPAREN validar_parametros
Rule 38    function_use -> validar_funcion LPAREN RPAREN validar_parametros
Rule 39    validar_funcion -> ID
Rule 40    add_parametro -> expresion
Rule 41    validar_parametros -> <empty>
Rule 42    more_ids -> COMMA add_parametro more_ids
Rule 43    more_ids -> <empty>
Rule 44    assignation -> id_aux value_list actualiza_pilaOper_a expresion
Rule 45    actualiza_pilaOper_a -> EQUAL
Rule 46    value_list -> value_list_aux LBRACKET expresion RBRACKET
Rule 47    value_list -> <empty>
Rule 48    value_list_aux -> <empty>
Rule 49    imprime -> IMPRIME LPAREN imprimir RPAREN
Rule 50    imprimir -> expresion imprimir_mas
Rule 51    imprimir_mas -> COMMA imprimir
Rule 52    imprimir_mas -> <empty>
Rule 53    condicion -> SI LPAREN expresion RPAREN gotoF_condicion LCURLY estatutos RCURLY else_condicion fin_condicion
Rule 54    gotoF_condicion -> <empty>
Rule 55    fin_condicion -> <empty>
Rule 56    else_condicion -> SINO LCURLY goto_else estatutos RCURLY
Rule 57    else_condicion -> <empty>
Rule 58    goto_else -> <empty>
Rule 59    mientras -> MIENTRAS actualiza_pilaSaltos LPAREN expresion RPAREN gotoF_while LCURLY estatutos RCURLY fin_while
Rule 60    actualiza_pilaSaltos -> <empty>
Rule 61    gotoF_while -> <empty>
Rule 62    fin_while -> <empty>
Rule 63    return -> RETURN expresion
Rule 64    accion -> DIRECCION LPAREN expresion RPAREN
Rule 65    dibujo -> CUADRADO LPAREN expresion RPAREN
Rule 66    dibujo -> RECTANGULO LPAREN expresion COMMA expresion RPAREN
Rule 67    dibujo -> TRIANGULO LPAREN expresion COMMA expresion COMMA expresion RPAREN
Rule 68    dibujo -> CIRCULO LPAREN expresion RPAREN
Rule 69    estatutos -> estatuto SEMI estatutos
Rule 70    estatutos -> <empty>
Rule 71    expresion -> big_exp or_exp checa_pila_or
Rule 72    checa_pila_or -> <empty>
Rule 73    or_exp -> OR expresion
Rule 74    or_exp -> <empty>
Rule 75    big_exp -> medium_exp and_exp checa_pila_and
Rule 76    checa_pila_and -> <empty>
Rule 77    and_exp -> AND big_exp
Rule 78    and_exp -> <empty>
Rule 79    medium_exp -> exp comp_exp checa_pila_comp
Rule 80    checa_pila_comp -> <empty>
Rule 81    comp_exp -> GT exp
Rule 82    comp_exp -> LT exp
Rule 83    comp_exp -> GE exp
Rule 84    comp_exp -> LE exp
Rule 85    comp_exp -> NE exp
Rule 86    comp_exp -> EQUALC exp
Rule 87    comp_exp -> <empty>
Rule 88    exp -> termino checa_pila_mm termino_mm
Rule 89    checa_pila_mm -> <empty>
Rule 90    termino_mm -> actualiza_pilaOper_mm exp
Rule 91    termino_mm -> <empty>
Rule 92    actualiza_pilaOper_mm -> PLUS
Rule 93    actualiza_pilaOper_mm -> MINUS
Rule 94    termino -> factor checa_pila_md factor_md
Rule 95    checa_pila_md -> <empty>
Rule 96    factor_md -> actualiza_pilaOper_md termino
Rule 97    factor_md -> <empty>
Rule 98    actualiza_pilaOper_md -> TIMES
Rule 99    actualiza_pilaOper_md -> DIVIDE
Rule 100   factor -> actualiza_pilaOper_lparen expresion actualiza_pilaOper_rparen
Rule 101   factor -> constante
Rule 102   actualiza_pilaOper_lparen -> LPAREN
Rule 103   actualiza_pilaOper_rparen -> RPAREN
Rule 104   constante -> id_aux value_list
Rule 105   constante -> cte_e_aux
Rule 106   constante -> cte_f_aux
Rule 107   constante -> cte_b_aux
Rule 108   constante -> cte_s_aux
Rule 109   constante -> function_use
Rule 110   id_aux -> ID
Rule 111   cte_e_aux -> CTE_E
Rule 112   cte_f_aux -> CTE_F
Rule 113   cte_s_aux -> CTE_S
Rule 114   cte_b_aux -> CTE_B

Terminals, with rules where they appear

AMPERSAND            : 
AND                  : 77
BOOLEANO             : 12
CIRCULO              : 68
COLON                : 1
COMMA                : 22 42 51 66 67 67
CTE_B                : 114
CTE_E                : 8 111
CTE_F                : 112
CTE_S                : 113
CUADRADO             : 65
DECIMAL              : 10
DIRECCION            : 64
DIVIDE               : 99
ENTERO               : 9
EQUAL                : 45
EQUALC               : 86
FIN                  : 1
FUNCION              : 16
GE                   : 83
GT                   : 81
ID                   : 1 7 8 18 21 39 110
IMPRIME              : 49
LBRACKET             : 8 46
LCURLY               : 26 53 56 59
LE                   : 84
LPAREN               : 16 24 37 38 49 53 59 64 65 66 67 68 102
LT                   : 82
MAIN                 : 24
MIENTRAS             : 59
MINUS                : 93
NE                   : 85
OR                   : 73
PALABRA              : 11
PLUS                 : 92
PROGRAMA             : 1
RBRACKET             : 8 46
RCURLY               : 26 53 56 59
RECTANGULO           : 66
RETURN               : 63
RPAREN               : 16 24 37 38 49 53 59 64 65 66 67 68 103
SEMI                 : 5 69
SI                   : 53
SINO                 : 56
TIMES                : 98
TRIANGULO            : 67
error                : 

Nonterminals, with rules where they appear

accion               : 34
actualiza_pilaOper_a : 44
actualiza_pilaOper_lparen : 100
actualiza_pilaOper_md : 96
actualiza_pilaOper_mm : 90
actualiza_pilaOper_rparen : 100
actualiza_pilaSaltos : 59
add_parametro        : 37 42
and_exp              : 75
assignation          : 28
big_exp              : 71 77
bloque               : 1
bloque_main          : 3
checa_pila_a         : 28
checa_pila_and       : 75
checa_pila_comp      : 79
checa_pila_md        : 94
checa_pila_mm        : 88
checa_pila_or        : 71
codigo_bloque        : 16 24
comp_exp             : 79
condicion            : 29
constante            : 101
cte_b_aux            : 107
cte_e_aux            : 105
cte_f_aux            : 106
cte_s_aux            : 108
dibujo               : 35
else_condicion       : 53
estatuto             : 69
estatutos            : 26 53 56 59 69
exp                  : 79 81 82 83 84 85 86 90
expresion            : 40 44 46 50 53 59 63 64 65 66 66 67 67 67 68 73 100
factor               : 94
factor_md            : 94
fin_condicion        : 53
fin_funcion          : 16
fin_while            : 59
funcion              : 13
funciones            : 3 13
function_use         : 32 109
gotoF_condicion      : 53
gotoF_while          : 59
goto_else            : 56
goto_main            : 1
guarda_funcion       : 16
guarda_funcion_id    : 16
guarda_variables_global : 3
guarda_variables_local : 26
id_aux               : 44 104
imprime              : 30
imprimir             : 49 51
imprimir_mas         : 50
mas_parametros       : 19 22
medium_exp           : 75
mientras             : 31
more_ids             : 37 42
or_exp               : 71
parametro            : 19 22
parametros           : 16
programa             : 0
return               : 33
set_main_id          : 24
termino              : 88 96
termino_mm           : 88
tipo                 : 7 8 16 21
validar_funcion      : 37 38
validar_parametros   : 37 38
value_list           : 44 104
value_list_aux       : 46
var                  : 5
vars                 : 3 5 26

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA goto_main ID COLON bloque FIN

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . goto_main ID COLON bloque FIN
    (2) goto_main -> .

    ID              reduce using rule 2 (goto_main -> .)

    goto_main                      shift and go to state 3

state 3

    (1) programa -> PROGRAMA goto_main . ID COLON bloque FIN

    ID              shift and go to state 4


state 4

    (1) programa -> PROGRAMA goto_main ID . COLON bloque FIN

    COLON           shift and go to state 5


state 5

    (1) programa -> PROGRAMA goto_main ID COLON . bloque FIN
    (3) bloque -> . vars guarda_variables_global funciones bloque_main
    (5) vars -> . var SEMI vars
    (6) vars -> .
    (7) var -> . tipo ID
    (8) var -> . tipo ID LBRACKET CTE_E RBRACKET
    (9) tipo -> . ENTERO
    (10) tipo -> . DECIMAL
    (11) tipo -> . PALABRA
    (12) tipo -> . BOOLEANO

    FUNCION         reduce using rule 6 (vars -> .)
    MAIN            reduce using rule 6 (vars -> .)
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 8
    PALABRA         shift and go to state 10
    BOOLEANO        shift and go to state 6

    tipo                           shift and go to state 13
    vars                           shift and go to state 7
    var                            shift and go to state 11
    bloque                         shift and go to state 12

state 6

    (12) tipo -> BOOLEANO .

    ID              reduce using rule 12 (tipo -> BOOLEANO .)


state 7

    (3) bloque -> vars . guarda_variables_global funciones bloque_main
    (4) guarda_variables_global -> .

    FUNCION         reduce using rule 4 (guarda_variables_global -> .)
    MAIN            reduce using rule 4 (guarda_variables_global -> .)

    guarda_variables_global        shift and go to state 14

state 8

    (10) tipo -> DECIMAL .

    ID              reduce using rule 10 (tipo -> DECIMAL .)


state 9

    (9) tipo -> ENTERO .

    ID              reduce using rule 9 (tipo -> ENTERO .)


state 10

    (11) tipo -> PALABRA .

    ID              reduce using rule 11 (tipo -> PALABRA .)


state 11

    (5) vars -> var . SEMI vars

    SEMI            shift and go to state 15


state 12

    (1) programa -> PROGRAMA goto_main ID COLON bloque . FIN

    FIN             shift and go to state 16


state 13

    (7) var -> tipo . ID
    (8) var -> tipo . ID LBRACKET CTE_E RBRACKET

    ID              shift and go to state 17


state 14

    (3) bloque -> vars guarda_variables_global . funciones bloque_main
    (13) funciones -> . funcion funciones
    (14) funciones -> .
    (16) funcion -> . FUNCION tipo guarda_funcion_id LPAREN parametros RPAREN guarda_funcion codigo_bloque fin_funcion

    MAIN            reduce using rule 14 (funciones -> .)
    FUNCION         shift and go to state 20

    funciones                      shift and go to state 19
    funcion                        shift and go to state 18

state 15

    (5) vars -> var SEMI . vars
    (5) vars -> . var SEMI vars
    (6) vars -> .
    (7) var -> . tipo ID
    (8) var -> . tipo ID LBRACKET CTE_E RBRACKET
    (9) tipo -> . ENTERO
    (10) tipo -> . DECIMAL
    (11) tipo -> . PALABRA
    (12) tipo -> . BOOLEANO

    FUNCION         reduce using rule 6 (vars -> .)
    MAIN            reduce using rule 6 (vars -> .)
    SI              reduce using rule 6 (vars -> .)
    IMPRIME         reduce using rule 6 (vars -> .)
    MIENTRAS        reduce using rule 6 (vars -> .)
    RETURN          reduce using rule 6 (vars -> .)
    DIRECCION       reduce using rule 6 (vars -> .)
    CUADRADO        reduce using rule 6 (vars -> .)
    RECTANGULO      reduce using rule 6 (vars -> .)
    TRIANGULO       reduce using rule 6 (vars -> .)
    CIRCULO         reduce using rule 6 (vars -> .)
    ID              reduce using rule 6 (vars -> .)
    RCURLY          reduce using rule 6 (vars -> .)
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 8
    PALABRA         shift and go to state 10
    BOOLEANO        shift and go to state 6

    var                            shift and go to state 11
    tipo                           shift and go to state 13
    vars                           shift and go to state 21

state 16

    (1) programa -> PROGRAMA goto_main ID COLON bloque FIN .

    $end            reduce using rule 1 (programa -> PROGRAMA goto_main ID COLON bloque FIN .)


state 17

    (7) var -> tipo ID .
    (8) var -> tipo ID . LBRACKET CTE_E RBRACKET

    SEMI            reduce using rule 7 (var -> tipo ID .)
    LBRACKET        shift and go to state 22


state 18

    (13) funciones -> funcion . funciones
    (13) funciones -> . funcion funciones
    (14) funciones -> .
    (16) funcion -> . FUNCION tipo guarda_funcion_id LPAREN parametros RPAREN guarda_funcion codigo_bloque fin_funcion

    MAIN            reduce using rule 14 (funciones -> .)
    FUNCION         shift and go to state 20

    funciones                      shift and go to state 23
    funcion                        shift and go to state 18

state 19

    (3) bloque -> vars guarda_variables_global funciones . bloque_main
    (24) bloque_main -> . MAIN LPAREN RPAREN set_main_id codigo_bloque

    MAIN            shift and go to state 25

    bloque_main                    shift and go to state 24

state 20

    (16) funcion -> FUNCION . tipo guarda_funcion_id LPAREN parametros RPAREN guarda_funcion codigo_bloque fin_funcion
    (9) tipo -> . ENTERO
    (10) tipo -> . DECIMAL
    (11) tipo -> . PALABRA
    (12) tipo -> . BOOLEANO

    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 8
    PALABRA         shift and go to state 10
    BOOLEANO        shift and go to state 6

    tipo                           shift and go to state 26

state 21

    (5) vars -> var SEMI vars .

    SI              reduce using rule 5 (vars -> var SEMI vars .)
    IMPRIME         reduce using rule 5 (vars -> var SEMI vars .)
    MIENTRAS        reduce using rule 5 (vars -> var SEMI vars .)
    RETURN          reduce using rule 5 (vars -> var SEMI vars .)
    DIRECCION       reduce using rule 5 (vars -> var SEMI vars .)
    CUADRADO        reduce using rule 5 (vars -> var SEMI vars .)
    RECTANGULO      reduce using rule 5 (vars -> var SEMI vars .)
    TRIANGULO       reduce using rule 5 (vars -> var SEMI vars .)
    CIRCULO         reduce using rule 5 (vars -> var SEMI vars .)
    ID              reduce using rule 5 (vars -> var SEMI vars .)
    RCURLY          reduce using rule 5 (vars -> var SEMI vars .)
    FUNCION         reduce using rule 5 (vars -> var SEMI vars .)
    MAIN            reduce using rule 5 (vars -> var SEMI vars .)


state 22

    (8) var -> tipo ID LBRACKET . CTE_E RBRACKET

    CTE_E           shift and go to state 27


state 23

    (13) funciones -> funcion funciones .

    MAIN            reduce using rule 13 (funciones -> funcion funciones .)


state 24

    (3) bloque -> vars guarda_variables_global funciones bloque_main .

    FIN             reduce using rule 3 (bloque -> vars guarda_variables_global funciones bloque_main .)


state 25

    (24) bloque_main -> MAIN . LPAREN RPAREN set_main_id codigo_bloque

    LPAREN          shift and go to state 28


state 26

    (16) funcion -> FUNCION tipo . guarda_funcion_id LPAREN parametros RPAREN guarda_funcion codigo_bloque fin_funcion
    (18) guarda_funcion_id -> . ID

    ID              shift and go to state 30

    guarda_funcion_id              shift and go to state 29

state 27

    (8) var -> tipo ID LBRACKET CTE_E . RBRACKET

    RBRACKET        shift and go to state 31


state 28

    (24) bloque_main -> MAIN LPAREN . RPAREN set_main_id codigo_bloque

    RPAREN          shift and go to state 32


state 29

    (16) funcion -> FUNCION tipo guarda_funcion_id . LPAREN parametros RPAREN guarda_funcion codigo_bloque fin_funcion

    LPAREN          shift and go to state 33


state 30

    (18) guarda_funcion_id -> ID .

    LPAREN          reduce using rule 18 (guarda_funcion_id -> ID .)


state 31

    (8) var -> tipo ID LBRACKET CTE_E RBRACKET .

    SEMI            reduce using rule 8 (var -> tipo ID LBRACKET CTE_E RBRACKET .)


state 32

    (24) bloque_main -> MAIN LPAREN RPAREN . set_main_id codigo_bloque
    (25) set_main_id -> .

    LCURLY          reduce using rule 25 (set_main_id -> .)

    set_main_id                    shift and go to state 34

state 33

    (16) funcion -> FUNCION tipo guarda_funcion_id LPAREN . parametros RPAREN guarda_funcion codigo_bloque fin_funcion
    (19) parametros -> . parametro mas_parametros
    (20) parametros -> .
    (21) parametro -> . tipo ID
    (9) tipo -> . ENTERO
    (10) tipo -> . DECIMAL
    (11) tipo -> . PALABRA
    (12) tipo -> . BOOLEANO

    RPAREN          reduce using rule 20 (parametros -> .)
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 8
    PALABRA         shift and go to state 10
    BOOLEANO        shift and go to state 6

    tipo                           shift and go to state 35
    parametro                      shift and go to state 36
    parametros                     shift and go to state 37

state 34

    (24) bloque_main -> MAIN LPAREN RPAREN set_main_id . codigo_bloque
    (26) codigo_bloque -> . LCURLY vars guarda_variables_local estatutos RCURLY

    LCURLY          shift and go to state 39

    codigo_bloque                  shift and go to state 38

state 35

    (21) parametro -> tipo . ID

    ID              shift and go to state 40


state 36

    (19) parametros -> parametro . mas_parametros
    (22) mas_parametros -> . COMMA parametro mas_parametros
    (23) mas_parametros -> .

    COMMA           shift and go to state 42
    RPAREN          reduce using rule 23 (mas_parametros -> .)

    mas_parametros                 shift and go to state 41

state 37

    (16) funcion -> FUNCION tipo guarda_funcion_id LPAREN parametros . RPAREN guarda_funcion codigo_bloque fin_funcion

    RPAREN          shift and go to state 43


state 38

    (24) bloque_main -> MAIN LPAREN RPAREN set_main_id codigo_bloque .

    FIN             reduce using rule 24 (bloque_main -> MAIN LPAREN RPAREN set_main_id codigo_bloque .)


state 39

    (26) codigo_bloque -> LCURLY . vars guarda_variables_local estatutos RCURLY
    (5) vars -> . var SEMI vars
    (6) vars -> .
    (7) var -> . tipo ID
    (8) var -> . tipo ID LBRACKET CTE_E RBRACKET
    (9) tipo -> . ENTERO
    (10) tipo -> . DECIMAL
    (11) tipo -> . PALABRA
    (12) tipo -> . BOOLEANO

    SI              reduce using rule 6 (vars -> .)
    IMPRIME         reduce using rule 6 (vars -> .)
    MIENTRAS        reduce using rule 6 (vars -> .)
    RETURN          reduce using rule 6 (vars -> .)
    DIRECCION       reduce using rule 6 (vars -> .)
    CUADRADO        reduce using rule 6 (vars -> .)
    RECTANGULO      reduce using rule 6 (vars -> .)
    TRIANGULO       reduce using rule 6 (vars -> .)
    CIRCULO         reduce using rule 6 (vars -> .)
    ID              reduce using rule 6 (vars -> .)
    RCURLY          reduce using rule 6 (vars -> .)
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 8
    PALABRA         shift and go to state 10
    BOOLEANO        shift and go to state 6

    var                            shift and go to state 11
    tipo                           shift and go to state 13
    vars                           shift and go to state 44

state 40

    (21) parametro -> tipo ID .

    COMMA           reduce using rule 21 (parametro -> tipo ID .)
    RPAREN          reduce using rule 21 (parametro -> tipo ID .)


state 41

    (19) parametros -> parametro mas_parametros .

    RPAREN          reduce using rule 19 (parametros -> parametro mas_parametros .)


state 42

    (22) mas_parametros -> COMMA . parametro mas_parametros
    (21) parametro -> . tipo ID
    (9) tipo -> . ENTERO
    (10) tipo -> . DECIMAL
    (11) tipo -> . PALABRA
    (12) tipo -> . BOOLEANO

    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 8
    PALABRA         shift and go to state 10
    BOOLEANO        shift and go to state 6

    parametro                      shift and go to state 45
    tipo                           shift and go to state 35

state 43

    (16) funcion -> FUNCION tipo guarda_funcion_id LPAREN parametros RPAREN . guarda_funcion codigo_bloque fin_funcion
    (15) guarda_funcion -> .

    LCURLY          reduce using rule 15 (guarda_funcion -> .)

    guarda_funcion                 shift and go to state 46

state 44

    (26) codigo_bloque -> LCURLY vars . guarda_variables_local estatutos RCURLY
    (27) guarda_variables_local -> .

    SI              reduce using rule 27 (guarda_variables_local -> .)
    IMPRIME         reduce using rule 27 (guarda_variables_local -> .)
    MIENTRAS        reduce using rule 27 (guarda_variables_local -> .)
    RETURN          reduce using rule 27 (guarda_variables_local -> .)
    DIRECCION       reduce using rule 27 (guarda_variables_local -> .)
    CUADRADO        reduce using rule 27 (guarda_variables_local -> .)
    RECTANGULO      reduce using rule 27 (guarda_variables_local -> .)
    TRIANGULO       reduce using rule 27 (guarda_variables_local -> .)
    CIRCULO         reduce using rule 27 (guarda_variables_local -> .)
    ID              reduce using rule 27 (guarda_variables_local -> .)
    RCURLY          reduce using rule 27 (guarda_variables_local -> .)

    guarda_variables_local         shift and go to state 47

state 45

    (22) mas_parametros -> COMMA parametro . mas_parametros
    (22) mas_parametros -> . COMMA parametro mas_parametros
    (23) mas_parametros -> .

    COMMA           shift and go to state 42
    RPAREN          reduce using rule 23 (mas_parametros -> .)

    mas_parametros                 shift and go to state 48

state 46

    (16) funcion -> FUNCION tipo guarda_funcion_id LPAREN parametros RPAREN guarda_funcion . codigo_bloque fin_funcion
    (26) codigo_bloque -> . LCURLY vars guarda_variables_local estatutos RCURLY

    LCURLY          shift and go to state 39

    codigo_bloque                  shift and go to state 49

state 47

    (26) codigo_bloque -> LCURLY vars guarda_variables_local . estatutos RCURLY
    (69) estatutos -> . estatuto SEMI estatutos
    (70) estatutos -> .
    (28) estatuto -> . assignation checa_pila_a
    (29) estatuto -> . condicion
    (30) estatuto -> . imprime
    (31) estatuto -> . mientras
    (32) estatuto -> . function_use
    (33) estatuto -> . return
    (34) estatuto -> . accion
    (35) estatuto -> . dibujo
    (44) assignation -> . id_aux value_list actualiza_pilaOper_a expresion
    (53) condicion -> . SI LPAREN expresion RPAREN gotoF_condicion LCURLY estatutos RCURLY else_condicion fin_condicion
    (49) imprime -> . IMPRIME LPAREN imprimir RPAREN
    (59) mientras -> . MIENTRAS actualiza_pilaSaltos LPAREN expresion RPAREN gotoF_while LCURLY estatutos RCURLY fin_while
    (37) function_use -> . validar_funcion LPAREN add_parametro more_ids RPAREN validar_parametros
    (38) function_use -> . validar_funcion LPAREN RPAREN validar_parametros
    (63) return -> . RETURN expresion
    (64) accion -> . DIRECCION LPAREN expresion RPAREN
    (65) dibujo -> . CUADRADO LPAREN expresion RPAREN
    (66) dibujo -> . RECTANGULO LPAREN expresion COMMA expresion RPAREN
    (67) dibujo -> . TRIANGULO LPAREN expresion COMMA expresion COMMA expresion RPAREN
    (68) dibujo -> . CIRCULO LPAREN expresion RPAREN
    (110) id_aux -> . ID
    (39) validar_funcion -> . ID

    RCURLY          reduce using rule 70 (estatutos -> .)
    SI              shift and go to state 68
    IMPRIME         shift and go to state 65
    MIENTRAS        shift and go to state 60
    RETURN          shift and go to state 50
    DIRECCION       shift and go to state 59
    CUADRADO        shift and go to state 69
    RECTANGULO      shift and go to state 70
    TRIANGULO       shift and go to state 56
    CIRCULO         shift and go to state 71
    ID              shift and go to state 62

    function_use                   shift and go to state 51
    mientras                       shift and go to state 67
    return                         shift and go to state 52
    estatuto                       shift and go to state 53
    dibujo                         shift and go to state 63
    condicion                      shift and go to state 54
    id_aux                         shift and go to state 55
    imprime                        shift and go to state 58
    accion                         shift and go to state 66
    validar_funcion                shift and go to state 57
    estatutos                      shift and go to state 61
    assignation                    shift and go to state 64

state 48

    (22) mas_parametros -> COMMA parametro mas_parametros .

    RPAREN          reduce using rule 22 (mas_parametros -> COMMA parametro mas_parametros .)


state 49

    (16) funcion -> FUNCION tipo guarda_funcion_id LPAREN parametros RPAREN guarda_funcion codigo_bloque . fin_funcion
    (17) fin_funcion -> .

    FUNCION         reduce using rule 17 (fin_funcion -> .)
    MAIN            reduce using rule 17 (fin_funcion -> .)

    fin_funcion                    shift and go to state 72

state 50

    (63) return -> RETURN . expresion
    (71) expresion -> . big_exp or_exp checa_pila_or
    (75) big_exp -> . medium_exp and_exp checa_pila_and
    (79) medium_exp -> . exp comp_exp checa_pila_comp
    (88) exp -> . termino checa_pila_mm termino_mm
    (94) termino -> . factor checa_pila_md factor_md
    (100) factor -> . actualiza_pilaOper_lparen expresion actualiza_pilaOper_rparen
    (101) factor -> . constante
    (102) actualiza_pilaOper_lparen -> . LPAREN
    (104) constante -> . id_aux value_list
    (105) constante -> . cte_e_aux
    (106) constante -> . cte_f_aux
    (107) constante -> . cte_b_aux
    (108) constante -> . cte_s_aux
    (109) constante -> . function_use
    (110) id_aux -> . ID
    (111) cte_e_aux -> . CTE_E
    (112) cte_f_aux -> . CTE_F
    (114) cte_b_aux -> . CTE_B
    (113) cte_s_aux -> . CTE_S
    (37) function_use -> . validar_funcion LPAREN add_parametro more_ids RPAREN validar_parametros
    (38) function_use -> . validar_funcion LPAREN RPAREN validar_parametros
    (39) validar_funcion -> . ID

    LPAREN          shift and go to state 88
    ID              shift and go to state 62
    CTE_E           shift and go to state 82
    CTE_F           shift and go to state 81
    CTE_B           shift and go to state 83
    CTE_S           shift and go to state 78

    cte_f_aux                      shift and go to state 73
    function_use                   shift and go to state 74
    termino                        shift and go to state 75
    cte_s_aux                      shift and go to state 76
    cte_e_aux                      shift and go to state 77
    medium_exp                     shift and go to state 79
    factor                         shift and go to state 80
    id_aux                         shift and go to state 84
    exp                            shift and go to state 85
    constante                      shift and go to state 86
    cte_b_aux                      shift and go to state 87
    validar_funcion                shift and go to state 57
    actualiza_pilaOper_lparen      shift and go to state 89
    expresion                      shift and go to state 90
    big_exp                        shift and go to state 91

state 51

    (32) estatuto -> function_use .

    SEMI            reduce using rule 32 (estatuto -> function_use .)


state 52

    (33) estatuto -> return .

    SEMI            reduce using rule 33 (estatuto -> return .)


state 53

    (69) estatutos -> estatuto . SEMI estatutos

    SEMI            shift and go to state 92


state 54

    (29) estatuto -> condicion .

    SEMI            reduce using rule 29 (estatuto -> condicion .)


state 55

    (44) assignation -> id_aux . value_list actualiza_pilaOper_a expresion
    (46) value_list -> . value_list_aux LBRACKET expresion RBRACKET
    (47) value_list -> .
    (48) value_list_aux -> .

    EQUAL           reduce using rule 47 (value_list -> .)
    LBRACKET        reduce using rule 48 (value_list_aux -> .)

    value_list                     shift and go to state 93
    value_list_aux                 shift and go to state 94

state 56

    (67) dibujo -> TRIANGULO . LPAREN expresion COMMA expresion COMMA expresion RPAREN

    LPAREN          shift and go to state 95


state 57

    (37) function_use -> validar_funcion . LPAREN add_parametro more_ids RPAREN validar_parametros
    (38) function_use -> validar_funcion . LPAREN RPAREN validar_parametros

    LPAREN          shift and go to state 96


state 58

    (30) estatuto -> imprime .

    SEMI            reduce using rule 30 (estatuto -> imprime .)


state 59

    (64) accion -> DIRECCION . LPAREN expresion RPAREN

    LPAREN          shift and go to state 97


state 60

    (59) mientras -> MIENTRAS . actualiza_pilaSaltos LPAREN expresion RPAREN gotoF_while LCURLY estatutos RCURLY fin_while
    (60) actualiza_pilaSaltos -> .

    LPAREN          reduce using rule 60 (actualiza_pilaSaltos -> .)

    actualiza_pilaSaltos           shift and go to state 98

state 61

    (26) codigo_bloque -> LCURLY vars guarda_variables_local estatutos . RCURLY

    RCURLY          shift and go to state 99


state 62

    (110) id_aux -> ID .
    (39) validar_funcion -> ID .

    LBRACKET        reduce using rule 110 (id_aux -> ID .)
    TIMES           reduce using rule 110 (id_aux -> ID .)
    DIVIDE          reduce using rule 110 (id_aux -> ID .)
    PLUS            reduce using rule 110 (id_aux -> ID .)
    MINUS           reduce using rule 110 (id_aux -> ID .)
    GT              reduce using rule 110 (id_aux -> ID .)
    LT              reduce using rule 110 (id_aux -> ID .)
    GE              reduce using rule 110 (id_aux -> ID .)
    LE              reduce using rule 110 (id_aux -> ID .)
    NE              reduce using rule 110 (id_aux -> ID .)
    EQUALC          reduce using rule 110 (id_aux -> ID .)
    AND             reduce using rule 110 (id_aux -> ID .)
    OR              reduce using rule 110 (id_aux -> ID .)
    RPAREN          reduce using rule 110 (id_aux -> ID .)
    SEMI            reduce using rule 110 (id_aux -> ID .)
    COMMA           reduce using rule 110 (id_aux -> ID .)
    RBRACKET        reduce using rule 110 (id_aux -> ID .)
    EQUAL           reduce using rule 110 (id_aux -> ID .)
    LPAREN          reduce using rule 39 (validar_funcion -> ID .)


state 63

    (35) estatuto -> dibujo .

    SEMI            reduce using rule 35 (estatuto -> dibujo .)


state 64

    (28) estatuto -> assignation . checa_pila_a
    (36) checa_pila_a -> .

    SEMI            reduce using rule 36 (checa_pila_a -> .)

    checa_pila_a                   shift and go to state 100

state 65

    (49) imprime -> IMPRIME . LPAREN imprimir RPAREN

    LPAREN          shift and go to state 101


state 66

    (34) estatuto -> accion .

    SEMI            reduce using rule 34 (estatuto -> accion .)


state 67

    (31) estatuto -> mientras .

    SEMI            reduce using rule 31 (estatuto -> mientras .)


state 68

    (53) condicion -> SI . LPAREN expresion RPAREN gotoF_condicion LCURLY estatutos RCURLY else_condicion fin_condicion

    LPAREN          shift and go to state 102


state 69

    (65) dibujo -> CUADRADO . LPAREN expresion RPAREN

    LPAREN          shift and go to state 103


state 70

    (66) dibujo -> RECTANGULO . LPAREN expresion COMMA expresion RPAREN

    LPAREN          shift and go to state 104


state 71

    (68) dibujo -> CIRCULO . LPAREN expresion RPAREN

    LPAREN          shift and go to state 105


state 72

    (16) funcion -> FUNCION tipo guarda_funcion_id LPAREN parametros RPAREN guarda_funcion codigo_bloque fin_funcion .

    FUNCION         reduce using rule 16 (funcion -> FUNCION tipo guarda_funcion_id LPAREN parametros RPAREN guarda_funcion codigo_bloque fin_funcion .)
    MAIN            reduce using rule 16 (funcion -> FUNCION tipo guarda_funcion_id LPAREN parametros RPAREN guarda_funcion codigo_bloque fin_funcion .)


state 73

    (106) constante -> cte_f_aux .
